will add HR and others later

--- a/MarketingAudit.org
+++ b/MarketingAudit.org
@@ -91,16 +91,14 @@
     - relationship among suppliers (cartels)
 
 *** Facilitators
-    - the outlook of transportation services
-    - cost and availabitity of warehousing
-    - availabity of financial resource
+    - The outlook of transportation services
+    - Cost and availabitity of warehousing
+    - Availabity of financial resource
     - effectiveness of advertisement agency performing. trends occuring in advertisement
     - strength of the company's facilitators (e.i. transport,
       advertisement, finance, etc) with respect to competitors
 
-
 ** Marketing Strategy Audit
-
 *** Marketing Objectives
     - Does the company have a mission statement and vision statement?
     - What are the company's current objectives for each business unit
