Fixed the title of the document

--- a/Project.org
+++ b/Project.org
@@ -1,4 +1,4 @@
-* Marketing Plan for DBS Roofing Systems Ghana Ltd. (2019 - 2024)
+#+TITLE: Marketing Plan for DBS Roofing Systems Ghana Ltd. (2019 - 2024)
 
 * Executive Summary
 ** Background
